--- a/index.html
+++ b/index.html
@@ -1,101 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Liverpool FC Fan Page</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #c8102e; /* Liverpool red */
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      min-height: 100vh;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      text-align: center;
-    }
-    header {
-      width: 100%;
-      background: rgba(0,0,0,0.2);
-      padding: 10px 0;
-      position: sticky;
-      top: 0;
-      display: flex;
-      justify-content: center;
-      z-index: 100;
-    }
-    nav {
-      display: flex;
-      gap: 20px;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      padding: 8px 16px;
-      border-radius: 20px;
-      transition: background 0.3s;
-    }
-    nav a:hover {
-      background: rgba(255, 255, 255, 0.2);
-    }
-    main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 40px 20px;
-    }
-    .logo {
-      max-width: 300px;
-      width: 100%;
-    }
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 20px;
-    }
-    p.slogan {
-      font-size: 1.5rem;
-      margin-top: 20px;
-      font-style: italic;
-      text-shadow: 0 0 5px #fff, 0 0 10px #ff0000, 0 0 20px #ff3333, 0 0 40px #ff6666;
-    }
-    section {
-      padding: 60px 20px;
-    }
-    section h2 {
-      margin-bottom: 20px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        /* insert content from css.txt */
+    </style>
 </head>
 <body>
-  <!-- <header>
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#players">Players</a>
-      <a href="#fixtures">Fixtures</a>
-    </nav>
-  </header> -->
-  
-  <main id="home">
-    <h1>Liverpool FC Fan Page</h1>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/0/0c/Liverpool_FC.svg" alt="Liverpool FC Logo">
-    <p class="slogan">“You’ll Never Walk Alone”</p>
-  </main>
-
-  <!-- <section id="players">
-    <h2>Players</h2>
-    <p>Details about Liverpool FC players will go here.</p>
-  </section> -->
-
-  <!-- <section id="fixtures">
-    <h2>Fixtures</h2>
-    <p>Upcoming fixtures will be displayed here.</p>
-  </section> -->
+    <div class="background">
+        <div class="container">
+          <div class="screen">
+            <div class="screen-header">
+              <div class="screen-header-left">
+                <div class="screen-header-button close"></div>
+                <div class="screen-header-button maximize"></div>
+                <div class="screen-header-button minimize"></div>
+              </div>
+              <div class="screen-header-right">
+                <div class="screen-header-ellipsis"></div>
+                <div class="screen-header-ellipsis"></div>
+                <div class="screen-header-ellipsis"></div>
+              </div>
+            </div>
+            <div class="screen-body">
+              <div class="screen-body-item left">
+                <div class="app-title">
+                  <span>CONTACT</span>
+                  <span>US</span>
+                </div>
+                <div class="app-contact">CONTACT INFO : +62 81 314 928 595</div>
+              </div>
+              <div class="screen-body-item">
+                <!-- insert content from form.txt -->
+              </div>
+            </div>
+          </div>
+          <div class="credits">
+            inspired by
+            <a class="credits-link" href="https://dribbble.com/shots/2666271-Contact" target="_blank">
+              <svg class="dribbble" viewBox="0 0 200 200">
+                <g stroke="#ffffff" fill="none">
+                  <circle cx="100" cy="100" r="90" stroke-width="20"></circle>
+                  <path d="M62.737004,13.7923523 C105.08055,51.0454853 135.018754,126.906957 141.768278,182.963345" stroke-width="20"></path>
+                  <path d="M10.3787186,87.7261455 C41.7092324,90.9577894 125.850356,86.5317271 163.474536,38.7920951" stroke-width="20"></path>
+                  <path d="M41.3611549,163.928627 C62.9207607,117.659048 137.020642,86.7137169 189.041451,107.858103" stroke-width="20"></path>
+                </g>
+              </svg>
+              Gururaj
+            </a>
+          </div>
+        </div>
+      </div>      
 </body>
 </html>
